--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "engines": {
     "node": "0.10.x",
     "npm": "1.4.x"
-   },
+  },
   "devDependencies": {
     "sqlite3": "^3.0.5"
   },
@@ -19,10 +19,10 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
+    "method-override": "^2.3.2",
     "morgan": "~1.3.0",
     "pg": "^4.1.1",
     "sequelize": "^2.1.0",
     "serve-favicon": "~2.1.3"
-
   }
 }
