--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
-DATABASE_URL=postgres://cpzmihzoxhakzz:n2jteX6XA-63V_l54Jz16TnE_O@ec2-54-243-187-196.compute-1.amazonaws.com:5432/dcnqbqu5hu4g7m
+DATABASE_URL=postgres://fjeyxikjslbpqb:eQoFubhPqaO0vn80SwcariM7f9@ec2-54-163-238-96.compute-1.amazonaws.com:5432/di170ai34pcaf
 
