--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
 DATABASE_URL=postgres://fjeyxikjslbpqb:eQoFubhPqaO0vn80SwcariM7f9@ec2-54-163-238-96.compute-1.amazonaws.com:5432/di170ai34pcaf
-
+PASSWORD_ENCRYPTION_KEY=12345678
